// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugins/styled-components > should enable ssr when target contain node 1`] = `
{
  "include": [
    {
      "and": [
        "<ROOT>",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
  ],
  "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "use": [
    {
      "loader": "<ROOT>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
      "options": {
        "babelrc": false,
        "compact": false,
        "configFile": false,
        "plugins": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
            {
              "version": "legacy",
            },
          ],
          "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
          "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
            {
              "proposal": "minimal",
            },
          ],
          "<ROOT>/node_modules/<PNPM_INNER>/babel-plugin-dynamic-import-node/lib/index.js",
          [
            "<ROOT>/packages/compat/uni-builder/compiled/babel-plugin-lodash/index.js",
            {},
          ],
          [
            "<ROOT>/node_modules/<PNPM_INNER>/babel-plugin-styled-components/lib/index.js",
            {
              "displayName": true,
              "pure": false,
              "ssr": true,
              "transpileTemplateLiterals": true,
            },
          ],
        ],
        "presets": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
            {
              "exclude": [
                "transform-typeof-symbol",
              ],
              "modules": "commonjs",
              "targets": [
                "node >= 14",
              ],
            },
          ],
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
            {
              "allExtensions": true,
              "allowDeclareFields": true,
              "allowNamespaces": true,
              "isTSX": true,
              "optimizeConstEnums": true,
            },
          ],
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
            {
              "development": true,
              "runtime": "classic",
              "useBuiltIns": true,
              "useSpread": false,
            },
          ],
        ],
      },
    },
  ],
}
`;

exports[`plugins/styled-components > should enable ssr when target contain node 2`] = `
{
  "include": [
    {
      "and": [
        "<ROOT>",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
  ],
  "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "use": [
    {
      "loader": "<ROOT>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
      "options": {
        "babelrc": false,
        "compact": false,
        "configFile": false,
        "plugins": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
            {
              "version": "legacy",
            },
          ],
          "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
          "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
            {
              "proposal": "minimal",
            },
          ],
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
            {
              "useESModules": true,
              "version": "7.23.2",
            },
          ],
          "<ROOT>/packages/babel-preset/dist/pluginLockCorejsVersion",
          [
            "<ROOT>/packages/compat/uni-builder/compiled/babel-plugin-lodash/index.js",
            {},
          ],
          [
            "<ROOT>/node_modules/<PNPM_INNER>/react-refresh/babel.js",
            {
              "skipEnvCheck": true,
            },
          ],
          [
            "<ROOT>/node_modules/<PNPM_INNER>/babel-plugin-styled-components/lib/index.js",
            {
              "displayName": true,
              "pure": false,
              "ssr": true,
              "transpileTemplateLiterals": true,
            },
          ],
        ],
        "presets": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
            {
              "bugfixes": true,
              "corejs": {
                "proposals": true,
                "version": "3.32",
              },
              "exclude": [
                "transform-typeof-symbol",
              ],
              "modules": "commonjs",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
              "useBuiltIns": "usage",
            },
          ],
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
            {
              "allExtensions": true,
              "allowDeclareFields": true,
              "allowNamespaces": true,
              "isTSX": true,
              "optimizeConstEnums": true,
            },
          ],
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
            {
              "development": true,
              "runtime": "classic",
              "useBuiltIns": true,
              "useSpread": false,
            },
          ],
        ],
      },
    },
  ],
}
`;

exports[`plugins/styled-components > should works in webpack babel mode 1`] = `
{
  "include": [
    {
      "and": [
        "<ROOT>",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
  ],
  "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "use": [
    {
      "loader": "<ROOT>/node_modules/<PNPM_INNER>/babel-loader/lib/index.js",
      "options": {
        "babelrc": false,
        "compact": false,
        "configFile": false,
        "plugins": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
            {
              "version": "legacy",
            },
          ],
          "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
          "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
            {
              "proposal": "minimal",
            },
          ],
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
            {
              "useESModules": true,
              "version": "7.23.2",
            },
          ],
          "<ROOT>/packages/babel-preset/dist/pluginLockCorejsVersion",
          [
            "<ROOT>/packages/compat/uni-builder/compiled/babel-plugin-lodash/index.js",
            {},
          ],
          [
            "<ROOT>/node_modules/<PNPM_INNER>/react-refresh/babel.js",
            {
              "skipEnvCheck": true,
            },
          ],
          [
            "<ROOT>/node_modules/<PNPM_INNER>/babel-plugin-styled-components/lib/index.js",
            {
              "displayName": true,
              "pure": false,
              "ssr": false,
              "transpileTemplateLiterals": true,
            },
          ],
        ],
        "presets": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
            {
              "bugfixes": true,
              "corejs": {
                "proposals": true,
                "version": "3.32",
              },
              "exclude": [
                "transform-typeof-symbol",
              ],
              "modules": "commonjs",
              "targets": [
                "chrome >= 87",
                "edge >= 88",
                "firefox >= 78",
                "safari >= 14",
              ],
              "useBuiltIns": "usage",
            },
          ],
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
            {
              "allExtensions": true,
              "allowDeclareFields": true,
              "allowNamespaces": true,
              "isTSX": true,
              "optimizeConstEnums": true,
            },
          ],
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-react/lib/index.js",
            {
              "development": true,
              "runtime": "classic",
              "useBuiltIns": true,
              "useSpread": false,
            },
          ],
        ],
      },
    },
  ],
}
`;

exports[`plugins/styled-components > should works in webpack swc mode 1`] = `
{
  "include": [
    {
      "and": [
        "<ROOT>",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
  ],
  "test": /\\\\\\.\\(js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "use": [
    {
      "loader": "<ROOT>/packages/compat/plugin-swc/dist/loader",
      "options": {
        "cwd": "<ROOT>",
        "env": {
          "coreJs": "3.32",
          "mode": "usage",
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
        "extensions": {
          "lockCorejsVersion": {
            "corejs": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
            "swcHelpers": "<ROOT>/node_modules/<PNPM_INNER>/@swc/helpers",
          },
          "lodash": {
            "cwd": "<ROOT>",
            "ids": [
              "lodash",
              "lodash-es",
            ],
          },
          "styledComponents": {
            "displayName": true,
            "pure": false,
            "ssr": false,
            "transpileTemplateLiterals": true,
          },
        },
        "inlineSourcesContent": true,
        "jsc": {
          "externalHelpers": true,
          "parser": {
            "decorators": true,
            "syntax": "typescript",
            "tsx": true,
          },
          "preserveAllComments": true,
          "transform": {
            "react": {
              "refresh": true,
              "runtime": "classic",
            },
          },
        },
        "minify": false,
        "sourceMaps": true,
      },
    },
  ],
}
`;
